<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable name="viewModel" type="com.example.quickcash.RegistrationViewModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/quickcashwhite"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/employer1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:clickable="true"
                    android:focusable="true"
                    android:onClick="@{()->viewModel.helperToClientSelected()}"
                    android:text="@string/client"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/employee1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:layout_weight="1"
                    android:text="@string/helper"
                    android:textColor="@color/quickcashgreen"
                    android:textSize="20sp"
                    android:textStyle="bold" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="266dp"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:contentDescription="@string/todo"
                android:src="@drawable/half_oval_left" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="30dp"
                android:text="@string/requirements"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/reqs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="30"
                android:text="• Verified Account \n • Can be payed for hired services \n • Will not abandon tasks taken"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="30"
                android:text="@string/help_others_and_get"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="40"
                android:text="Help People with thier Tasks"
                android:textColor="#000000"
                android:textSize="16dp" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingStart="10dp"
                android:paddingTop="30dp"
                android:text="@string/be_your_own_boss"
                android:textAllCaps="false"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="#000000"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="5"
                android:paddingStart="40"
                android:text="@string/as_a_helper_you_set_your_own_hours_and_work_as_little_or_as_much_as_you_like"
                android:textColor="#000000"
                android:textSize="16dp" />

        </LinearLayout>

        <Button
            android:id="@+id/helperChooseRoleButton"
            style="@style/classic_button"
            android:layout_width="312dp"
            android:layout_height="65dp"
            android:layout_marginBottom="16dp"
            android:onClick="@{() -> viewModel.typeSelected(true)}"
            android:text="@string/choose_this_role"
            android:textSize="20dp"
            app:layout_constraintBottom_toBottomOf="@+id/linearLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>